All -> use-package but removed C++ IDE (build later)

--- a/emacs.org
+++ b/emacs.org
@@ -1,31 +1,109 @@
 ;#+TITLE: Emacs Configuration
 #+PROPERTY: header-args:emacs-lisp :tangle .emacs.d/init.el
 
+* Use-package setup
+Use-package is like a package manager.
+Packages: Elpa is default, Melpa is community.
 
-* Old install of packages
-Replace each item with use-package.
-#+begin_src emacs-lisp  :tangle no
-
-  ;; adds the Melpa archive to the list of package repositories and then gives permission to Emacs to use these packages.
+#+begin_src emacs-lisp
+  ;; Initialize package sources
   (require 'package)
-  (add-to-list 'package-archives
-	     '("melpa" . "http://melpa.org/packages/") t)
+
+  (setq package-archives '(("melpa" . "https://melpa.org/packages/")
+			   ("org" . "https://orgmode.org/elpa/")
+			   ("elpa" . "https://elpa.gnu.org/packages/")))
+
   (package-initialize)
-  (package-refresh-contents)
+
+  (unless package-archive-contents
+   (package-refresh-contents))
+
+  ;; Initialize use-package on non-Linux platforms
+  (unless (package-installed-p 'use-package)
+     (package-install 'use-package))
+
+  (require 'use-package)
+  (setq use-package-always-ensure t)
+
+  (use-package command-log-mode)
+#+end_src
+
+#+RESULTS:
+
+* General Emacs
+** Global Configurations
+
+#+begin_src emacs-lisp
+  (setq inhibit-startup-message t)          ; inhibit startup message
+  (tool-bar-mode -1)                        ; remove toolbar
+  (scroll-bar-mode -1)                      ; remove side scrollbar
+  (tooltip-mode -1)                     ; Disable tooltips
+  ;(menu-bar-mode -1)                   ; Disable the menu bar
+  (set-fringe-mode 10)                  ; Give some breathing room
+  ;(global-display-line-numbers-mode t) ; show line numbers (better)
+  (global-visual-line-mode t)       ; removes coninuation arrow
+  (add-hook 'text-mode-hook 'flyspell-mode)   ;enable spellcheck on text mode
+  (setq make-backup-files nil)      ; stop creating backup~ files
+  (setq auto-save-default nil)      ; stop creating #autosave# files
+  (add-to-list 'auto-mode-alist '("\\.text\\'" . org-mode)) ; open texts in org-mode
+  (add-to-list 'auto-mode-alist '("\\.txt\\'" . org-mode))
+
+  ;; Set up the visible bell
+  (setq visible-bell t)
+
+  ;; Set up the visible bell
+  (setq visible-bell t)
+#+end_src
+
+** Vertico
+#+begin_src emacs-lisp
+(use-package vertico
+  :init
+  (vertico-mode)
+
+  ;; Different scroll margin
+  ;; (setq vertico-scroll-margin 0)
+
+  ;; Show more candidates
+  ;; (setq vertico-count 20)
+
+  ;; Grow and shrink the Vertico minibuffer
+  ;; (setq vertico-resize t)
+
+  ;; Optionally enable cycling for `vertico-next' and `vertico-previous'.
+  ;; (setq vertico-cycle t)
+  )
+#+end_src
+
+** Which-key
+#+begin_src emacs-lisp
+  (use-package which-key
+    :init (which-key-mode)
+    ;:diminish which-key-mode  ;remove name from minor mode list
+    :config
+    (setq which-key-idle-delay 1))
+#+end_src
+
+** Neotree
+#+begin_src emacs-lisp
+(use-package neotree)
+#+end_src
+
+** Magit
+#+begin_src emacs-lisp
+  (use-package magit)
 #+end_src
 
 
-#+begin_src emacs-lisp
-  ;; Install some packages
-  (defvar myPackages
-    '(better-defaults ; better theme
-      zeno-theme
-      neotree ; sidebar directory tree plugin
-      magit ; Git porcelain
-      ;;;; pythonIDE packages
-      elpy ; wraps jedi, flymake, yasnippit all in one package
-      company-quickhelp ; used to provide helpbox with auto-complete suggestion's help
-      ;;;; c/cpp IDE packages
+* C++
+Wants:
+- lsp-mode with clangd 
+- company (with company-fix for fuzzy filtering completion)
+- eldoc-box -documentation popup under curser for supported modes
+- Yassnippet
+- Projectile (but this might be more than just for c++)
+
+  ;;;; c/cpp IDE packages
       lsp-mode           ; Language server protocol for interpreting languages 
       yasnippet          ; Code templates
       lsp-treemacs       ; Tree renderer-- have not explored yet
@@ -38,40 +116,29 @@ Replace each item with use-package.
       which-key ; Displays key bindings following entered incomplete command
       ;helm-xref ; Helm interface for xref
       dap-mode  ; Debug Adapter Protocol is a wire protocol for communication between client and Debug Server
-      )
-    )
-  (mapc #'(lambda (package)
-	    (unless (package-installed-p package)
-	      (package-install package)))
-	myPackages)
-
-#+end_src
-
-* C++
-General idea from https://emacs-lsp.github.io/lsp-mode/tutorials/CPP-guide/
-
-#+begin_src emacs-lisp
-(which-key-mode)
-(add-hook 'c-mode-hook 'lsp)
-(add-hook 'c++-mode-hook 'lsp)
-
-(setq gc-cons-threshold (* 100 1024 1024)
-      read-process-output-max (* 1024 1024)
-      treemacs-space-between-root-nodes nil
-      company-idle-delay 0.0
-      company-minimum-prefix-length 1
-      lsp-idle-delay 0.1)  ;; clangd is fast
-
-(with-eval-after-load 'lsp-mode
-  (add-hook 'lsp-mode-hook #'lsp-enable-which-key-integration)
-  (require 'dap-cpptools)
-  (yas-global-mode))
-
-#+end_src
-
+  
+  
 * Python
-
+** Elpy
 #+begin_src emacs-lisp
+  (use-package elpy
+    :ensure t
+    :init (elpy-enable) ;enables Elpy in all future python buffers
+    :custom
+    (python-shell-interpreter "ipython")
+    (python-shell-interpreter-args "-i --simple-prompt")
+    (elpy-rpc-python-command "python3")
+    (elpy-shell-echo-output nil)
+    ;(elpy-rpc-backend "jedi")
+    ;; Not sure if the following should really be here
+    (python-shell-completion-native-enable nil)
+    (python-indent-offset 4)
+    (python-indent 4)
+    )
+#+end_src
+
+** OLD settings
+#+begin_src emacs-lisp  :tangle no
 ;; the following lines enable the elpy package as well as the ipython shell
 (elpy-enable)
 (setq python-shell-interpreter "ipython" ;require install ipython
@@ -91,6 +158,7 @@ General idea from https://emacs-lsp.github.io/lsp-mode/tutorials/CPP-guide/
 ;;;;;;; END Python IDE configuration ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 
 #+end_src
+
 
 * Org-Mode
 ** Text and Looks
@@ -122,14 +190,43 @@ General idea from https://emacs-lsp.github.io/lsp-mode/tutorials/CPP-guide/
 
   ;; This is needed as of Org 9.2
   (require 'org-tempo)
-
   (add-to-list 'org-structure-template-alist '("sh" . "src sh"))
   (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
   (add-to-list 'org-structure-template-alist '("py" . "src python"))
 
 #+end_src
 
-** Auto-tangle Configuration File
+
+* Looks
+*** Theme
+#+begin_src emacs-lisp
+    (use-package solarized-theme
+      :init (load-theme 'solarized-gruvbox-dark t))
+#+end_src
+
+*** Darken Code block in Org-Mode
+Darken the background of the source blocks by 3%. However, if you change your theme during editing the color of the code block will stay the same.
+This box is only really needed for certain themes which do not delineate between source and org text. As of now: solarized-gruvbox-dark
+#NOTE: The order of operation matters. Too early in the init.el file and org-block is not known. 
+
+#+begin_src emacs-lisp  
+(require 'color)
+(set-face-attribute 'org-block nil :background
+                    (color-darken-name
+                     (face-attribute 'default :background) 3))
+#+end_src
+
+*** Transparency
+#+begin_src emacs-lisp
+ (defun transparency (value)
+   "Sets the transparency of the frame window. 0=transparent/100=opaque"
+   (interactive "nTransparency Value 0 - 100 opaque:")
+   (set-frame-parameter (selected-frame) 'alpha value))
+(transparency 96)
+#+end_src
+
+
+* Auto-tangle Configuration File
 This snippet adds a hook to =org-mode= buffers so that =efs/org-babel-tangle-config= gets executed each time such a buffer gets saved.  This function checks to see if the file being saved is the Emacs.org file you're looking at right now, and if so, automatically exports the configuration here to the associated output files.
 
 #+begin_src emacs-lisp
@@ -145,126 +242,9 @@ This snippet adds a hook to =org-mode= buffers so that =efs/org-babel-tangle-con
 
 #+end_src
 
-#+RESULTS:
-| (lambda nil (add-hook 'after-save-hook #'efs/org-babel-tangle-config)) | #[0 \300\301\302\303\304$\207 [add-hook change-major-mode-hook org-show-all append local] 5] | #[0 \300\301\302\303\304$\207 [add-hook change-major-mode-hook org-babel-show-result-all append local] 5] | org-babel-result-hide-spec | org-babel-hide-all-hashes |
 
 
-#  LocalWords:  solarized gruvbox vertico
-
-* Use-package setup
-Use-package is like a package manager.
-Packages: Elpa is default, Melpa is community.
-
-#+begin_src emacs-lisp
-  ;; Initialize package sources
-  (require 'package)
-
-  (setq package-archives '(("melpa" . "https://melpa.org/packages/")
-			   ("org" . "https://orgmode.org/elpa/")
-			   ("elpa" . "https://elpa.gnu.org/packages/")))
-
-  (package-initialize)
-
-  (unless package-archive-contents
-   (package-refresh-contents))
-
-  ;; Initialize use-package on non-Linux platforms
-  (unless (package-installed-p 'use-package)
-     (package-install 'use-package))
-
-  (require 'use-package)
-  (setq use-package-always-ensure t)
-
-  (use-package command-log-mode)
-
-#+end_src
-
-#+RESULTS:
-
-* General Emacs
-** Looks
-*** Theme
-#+begin_src emacs-lisp
-    (use-package solarized-theme
-      :init (load-theme 'solarized-gruvbox-dark t))
-#+end_src
-
-#+RESULTS:
-
-**** OLD
-Set overall theme. Favorites: solarized-gruvbox-dark, material
-#+begin_src emacs-lisp : tangle no
-  (load-theme 'solarized-gruvbox-dark t)
-#+end_src
-
-*** Darken Code in Org-Mode
-Darken the background of the source blocks by 3%. However, if you change your theme during editing the color of the code block will stay the same.
-This box is only really needed for certain themes which do not delineate between source and org text. As of now: solarized-gruvbox-dark
-#NOTE: The order of operation matters. Too early in the init.el file and org-block is not known. 
-#+begin_src emacs-lisp  
-(require 'color)
-(set-face-attribute 'org-block nil :background
-                    (color-darken-name
-                     (face-attribute 'default :background) 3))
-#+end_src
 
 
-*** Transparency
-#+begin_src emacs-lisp
- (defun transparency (value)
-   "Sets the transparency of the frame window. 0=transparent/100=opaque"
-   (interactive "nTransparency Value 0 - 100 opaque:")
-   (set-frame-parameter (selected-frame) 'alpha value))
-(transparency 96)
-#+end_src
 
-#+RESULTS:
-
-** Global Configurations
-
-#+begin_src emacs-lisp
-  (setq inhibit-startup-message t)          ; inhibit startup message
-  (tool-bar-mode -1)                        ; remove toolbar
-  (scroll-bar-mode -1)                      ; remove side scrollbar
-  (tooltip-mode -1)                     ; Disable tooltips
-  ;(menu-bar-mode -1)                   ; Disable the menu bar
-  (set-fringe-mode 10)                  ; Give some breathing room
-  ;(global-display-line-numbers-mode t) ; show line numbers (better)
-  (global-visual-line-mode t)       ; removes coninuation arrow
-  (add-hook 'text-mode-hook 'flyspell-mode)   ;enable spellcheck on text mode
-  (setq make-backup-files nil)      ; stop creating backup~ files
-  (setq auto-save-default nil)      ; stop creating #autosave# files
-  (add-to-list 'auto-mode-alist '("\\.text\\'" . org-mode)) ; open texts in org-mode
-  (add-to-list 'auto-mode-alist '("\\.txt\\'" . org-mode))
-
-  ;; Set up the visible bell
-  (setq visible-bell t)
-
-  ;; Set up the visible bell
-  (setq visible-bell t)
-#+end_src
-
-#+RESULTS:
-: t
-
-** Vertico
-#+begin_src emacs-lisp
-(use-package vertico
-  :init
-  (vertico-mode)
-
-  ;; Different scroll margin
-  ;; (setq vertico-scroll-margin 0)
-
-  ;; Show more candidates
-  ;; (setq vertico-count 20)
-
-  ;; Grow and shrink the Vertico minibuffer
-  ;; (setq vertico-resize t)
-
-  ;; Optionally enable cycling for `vertico-next' and `vertico-previous'.
-  ;; (setq vertico-cycle t)
-  )
-#+end_src
-
-
+#  LocalWords:  solarized gruvbox vertico Magit Quickhelp Elpy
