--- a/emacs.org
+++ b/emacs.org
@@ -1,7 +1,6 @@
 ;#+TITLE: Emacs Configuration
 #+PROPERTY: header-args:emacs-lisp :tangle .emacs.d/init.el
 #+STARTUP: content
-
 * Setup
 ** Use-package
 Use-package is like a package manager.
@@ -44,7 +43,6 @@ This snippet adds a hook to =org-mode= buffers so that =efs/org-babel-tangle-con
         (org-babel-tangle))))
 
   (add-hook 'org-mode-hook (lambda () (add-hook 'after-save-hook #'efs/org-babel-tangle-config)))
-
 #+end_src
 
 * General Emacs
@@ -132,7 +130,7 @@ Better version of help.
 Ivy displays vertical completions of input buffer.
 #+begin_src emacs-lisp
     (use-package ivy
-      :diminish ivy-mode
+      :diminish
       :config
       (ivy-mode 1))
 #+end_src
@@ -167,11 +165,6 @@ Along with ivy-rich, counsel displays info along with suggestions in input buffe
 (use-package neotree)
 #+end_src
 
-** Magit
-#+begin_src emacs-lisp
-  (use-package magit)
-#+end_src
-
 ** Keybindings
 Make ESC quit prompts
 #+begin_src emacs-lisp
@@ -179,6 +172,39 @@ Make ESC quit prompts
 #+end_src
 
 Eventually create my own keybindings as shown: https://www.youtube.com/watch?v=xaZMwNELaJY
+
+* IDE
+Configured as shown in the following video: [[https://www.youtube.com/watch?v=INTu30BHZGk][Projectile and Magit]].
+** Magit
+Git interface. Custom variable displays Magit status buffer in the same buffer rather than splitting it. 
+#+begin_src emacs-lisp
+(use-package magit
+  :custom
+  (magit-display-buffer-function #'magit-display-buffer-same-window-except-diff-v1))
+#+end_src
+
+** Projectile
+Projectile allows me to set project-wide commands and variables.
+Notably: run, debug, project-variables, grep (and rg).
+#+begin_src emacs-lisp
+(use-package projectile
+  :diminish projectile-mode
+  :config (projectile-mode)
+  :custom ((projectile-completion-system 'ivy))
+  :bind-keymap
+  ("C-c p" . projectile-command-map)
+  :init
+  ;; NOTE: Set this to the folder where you keep your Git repos!
+  (when (file-directory-p "~/Projects/Code")
+    (setq projectile-project-search-path '("~/Projects/Code")))
+  (setq projectile-switch-project-action #'projectile-dired))
+
+(use-package counsel-projectile
+  :config (counsel-projectile-mode))
+#+end_src
+
+#+RESULTS:
+: t
 
 * C++
 Wants:
@@ -221,33 +247,75 @@ Wants:
 #+end_src
 
 * Org-Mode
-** Text and Looks
+** Mode setup
+#+begin_src emacs-lisp 
+  (defun efs/org-mode-setup ()
+        (org-indent-mode)
+        (variable-pitch-mode 1)
+        (visual-line-mode 1))
+#+end_src
+
+** Fonts 
 #+begin_src emacs-lisp
-(custom-set-faces
- ;; custom-set-faces was added by Custom.
- ;; If you edit it by hand, you could mess it up, so be careful.
- ;; Your init file should contain only one such instance.
- ;; If there is more than one, they won't work right.
- '(org-level-1 ((t (:inherit outline-1 :height 1.3))))
- '(org-level-2 ((t (:inherit outline-2 :height 1.2))))
- '(org-level-3 ((t (:inherit outline-3 :height 1.1))))
- '(org-level-4 ((t (:inherit outline-4 :height 1.0))))
- '(org-level-5 ((t (:inherit outline-5 :height 1.0)))))
-;; set maximum indentation for description lists
-(setq org-list-description-max-indent 5)
+  (defun efs/org-font-setup ()
+    ;; Replace list hyphen with dot
+    (font-lock-add-keywords 'org-mode
+                       '(("^ *\\([-]\\) "
+                        (0 (prog1 () (compose-region (match-beginning 1) (match-end 1) "•"))))))
 
-;; prevent demoting heading also shifting text inside sections
-(setq org-adapt-indentation nil)
+    ;; Set faces for heading levels
+    (dolist (face '((org-level-1 . 1.2)
+                    (org-level-2 . 1.1)
+                    (org-level-3 . 1.05)
+                    (org-level-4 . 1.0)
+                    (org-level-5 . 1.1)
+                    (org-level-6 . 1.1)
+                    (org-level-7 . 1.1)
+                    (org-level-8 . 1.1)))
+      (set-face-attribute (car face) nil :font "Cantarell" :weight 'regular :height (cdr face)))
 
-;; setting to allow sizing of JPG and PNGs in org-mode
-(setq org-image-actual-width nil)
+    ;; Ensure that anything that should be fixed-pitch in Org files appears that way
+    (set-face-attribute 'org-block nil :foreground nil :inherit 'fixed-pitch)
+    (set-face-attribute 'org-code nil   :inherit '(shadow fixed-pitch))
+    (set-face-attribute 'org-table nil   :inherit '(shadow fixed-pitch))
+    (set-face-attribute 'org-verbatim nil :inherit '(shadow fixed-pitch))
+    (set-face-attribute 'org-special-keyword nil :inherit '(font-lock-comment-face fixed-pitch))
+    (set-face-attribute 'org-meta-line nil :inherit '(font-lock-comment-face fixed-pitch))
+    (set-face-attribute 'org-checkbox nil :inherit 'fixed-pitch))
+#+end_src
 
+** Ellipsis
+#+begin_src emacs-lisp
+    (use-package org
+        :hook (org-mode . efs/org-mode-setup)
+        :config
+        (setq org-ellipsis " ▾")
+        (efs/org-font-setup))
+#+end_src
+
+** Bullets
+#+begin_src emacs-lisp 
+  (use-package org-bullets
+    :after org
+    :hook (org-mode . org-bullets-mode)
+    :custom
+    (org-bullets-bullet-list '("◉" "○" "●" "○" "●" "○" "●")))
+#+end_src
+
+** Center column
+#+begin_src emacs-lisp 
+(defun efs/org-mode-visual-fill ()
+  (setq visual-fill-column-width 100
+        visual-fill-column-center-text t)
+  (visual-fill-column-mode 1))
+
+(use-package visual-fill-column
+  :hook (org-mode . efs/org-mode-visual-fill))
 
 #+end_src
 
 ** Block Templates
-#+begin_src emacs-lisp
-
+#+begin_src emacs-lisp  
   ;; This is needed as of Org 9.2
   (require 'org-tempo)
   (add-to-list 'org-structure-template-alist '("sh" . "src sh"))
@@ -256,5 +324,15 @@ Wants:
 
 #+end_src
 
+** Fixes
+#+begin_src emacs-lisp  
+   ;; setting to allow sizing of JPG and PNGs in org-mode
+   (setq org-image-actual-width nil)
+#+end_src
 
-#  LocalWords:  solarized gruvbox vertico Magit Quickhelp Elpy Elisp Neotree Greduan's
+#+RESULTS:
+
+
+* Localwords
+#  LocalWords:  IDE solarized gruvbox vertico Magit Quickhelp Elpy Elisp Neotree Greduan's Localwords
+
